:lipstick: Refactor dark theme styling

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -2,8 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  color-scheme: light dark;
+}
+
 body {
-  @apply break-words;
+  @apply break-words bg-slate-50 dark:bg-slate-900 dark:text-slate-400;
 }
 
 a {
